@@ -29,6 +29,9 @@ install: build
 
 # Build architecture-independent files here.
 binary-indep: build install
+
+# Build architecture-dependent files here.
+binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installdebconf
@@ -36,9 +39,6 @@ binary-indep: build install
 	dh_installdeb 
 	dh_gencontrol
 	dh_builddeb
-
-# Build architecture-dependent files here.
-binary-arch: build install
 
 
 binary: binary-indep binary-arch
