@@ -3,6 +3,8 @@ palo-installer (0.0.7) UNRELEASED; urgency=low
   * Colin Watson
     - Use busybox echo and sed instead of /target/bin/echo and
       /target/bin/sed; the former seem to be enough (closes: #283908).
+    - palo-installer is Architecture: any, so build it in binary-arch, not
+      binary-indep.
 
  -- Colin Watson <cjwatson@debian.org>  Sun, 30 Jan 2005 22:36:19 +0000
 
